@@ -29,6 +29,7 @@ class Compress::Raw::Zlib::Inflate extends Compress::Raw::Zlib::Base {
       "Dictionary",
       "Bufsize",
       "LimitOutput",
+      "AppendOutput",
     ];
     
     Fn->check_option_names($options, $option_names);
@@ -42,6 +43,8 @@ class Compress::Raw::Zlib::Inflate extends Compress::Raw::Zlib::Base {
     $self->{Bufsize} = $options_h->get_or_default_int("Bufsize", 4096);
     
     $self->{LimitOutput} = (byte)$options_h->get_or_default_int("LimitOutput", 0);
+    
+    $self->{AppendOutput} = (byte)$options_h->get_or_default_int("AppendOutput", 0);
     
     unless ($self->{Bufsize} >= 1) {
       die "The value of '-Bufsize' option must be >= 1.";
